--- a/package.json
+++ b/package.json
@@ -47,34 +47,34 @@
     "d3": "latest",
     "dayjs": "^1.11.13",
     "embla-carousel-react": "8.5.1",
-    "framer-motion": "latest",
+    "framer-motion": "^12.23.26",
     "global-proxy-agent": "^1.0.1",
     "html-to-image": "^1.11.13",
     "input-otp": "1.4.1",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.454.0",
-    "next": "14.2.16",
+    "next": "^16.1.0",
     "next-themes": "^0.4.4",
     "qrcode": "^1.5.4",
     "qrcode.react": "latest",
-    "react": "^18",
+    "react": "^19.2.3",
     "react-day-picker": "8.10.1",
-    "react-dom": "^18",
+    "react-dom": "^19.2.3",
     "react-hook-form": "^7.54.1",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
     "sonner": "^1.7.1",
-    "tailwind-merge": "^2.5.5",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.6",
     "zod": "^3.24.1"
   },
   "devDependencies": {
-    "@types/node": "^22",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/node": "^22.19.3",
+    "@types/react": "^18.3.27",
+    "@types/react-dom": "^18.3.7",
     "postcss": "^8.5",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5"
+    "typescript": "^5.9.3"
   }
 }
